macos/openim_sdk_ffi_apple.h

typedef struct { const char *p; ptrdiff_t n; } _GoString_;
typedef _GoString_ GoString;
extern char* CreateImageMessageByURL(char* operationID, char* sourcePicture, char* bigPicture, char* snapshotPicture);
extern char* CreateSoundMessageByURL(char* operationID, char* soundBaseInfo);
extern char* CreateSoundMessage(char* operationID, char* soundPath, int64_t duration);
extern char* CreateVideoMessageByURL(char* operationID, char* videoBaseInfo);
extern char* CreateVideoMessage(char* operationID, char* videoPath, char* videoType, int64_t duration, char* snapshotPath);
extern char* CreateFileMessageByURL(char* operationID, char* fileBaseInfo);
extern char* CreateFileMessage(char* operationID, char* filePath, char* fileName);
extern char* CreateMergerMessage(char* operationID, char* messageList, char* title, char* summaryList);
extern char* CreateFaceMessage(char* operationID, int index, char* data);
extern char* CreateForwardMessage(char* operationID, char* m);
extern GoString GetConversationIDBySessionType(char* operationID, char* sourceID, int sessionType);
extern void SendMessage(char* operationID, char* message, char* recvID, char* groupID, char* offlinePushInfo);
extern void SendMessageNotOss(char* operationID, char* message, char* recvID, char* groupID, char* offlinePushInfo);
extern void FindMessageList(char* operationID, char* findMessageOptions);
extern void RevokeMessage(char* operationID, char* conversationID, char* clientMsgID);
extern void TypingStatusUpdate(char* operationID, char* recvID, char* msgTip);
// mark as read
//
extern void MarkConversationMessageAsRead(char* operationID, char* conversationID);
extern void MarkMessagesAsReadByMsgID(char* operationID, char* conversationID, char* clientMsgIDs);