lib/openim_sdk_ffi_bindings_generated.dart


  late final _CreateImageMessageByURLPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateImageMessageByURL');
  late final _CreateImageMessageByURL = _CreateImageMessageByURLPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateSoundMessageByURL(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> soundBaseInfo,
  ) {
    return _CreateSoundMessageByURL(
      operationID,
      soundBaseInfo,
    );
  }

  late final _CreateSoundMessageByURLPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateSoundMessageByURL');
  late final _CreateSoundMessageByURL = _CreateSoundMessageByURLPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateSoundMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> soundPath,
    int duration,
  ) {
    return _CreateSoundMessage(
      operationID,
      soundPath,
      duration,
    );
  }

  late final _CreateSoundMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Int64)>>('CreateSoundMessage');
  late final _CreateSoundMessage = _CreateSoundMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  ffi.Pointer<ffi.Char> CreateVideoMessageByURL(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> videoBaseInfo,
  ) {
    return _CreateVideoMessageByURL(
      operationID,
      videoBaseInfo,
    );
  }

  late final _CreateVideoMessageByURLPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateVideoMessageByURL');
  late final _CreateVideoMessageByURL = _CreateVideoMessageByURLPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateVideoMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> videoPath,
    ffi.Pointer<ffi.Char> videoType,
    int duration,
    ffi.Pointer<ffi.Char> snapshotPath,
  ) {
    return _CreateVideoMessage(
      operationID,
      videoPath,
      videoType,
      duration,
      snapshotPath,
    );
  }

  late final _CreateVideoMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int64,
              ffi.Pointer<ffi.Char>)>>('CreateVideoMessage');
  late final _CreateVideoMessage = _CreateVideoMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateFileMessageByURL(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> fileBaseInfo,
  ) {
    return _CreateFileMessageByURL(
      operationID,
      fileBaseInfo,
    );
  }

  late final _CreateFileMessageByURLPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateFileMessageByURL');
  late final _CreateFileMessageByURL = _CreateFileMessageByURLPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateFileMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> filePath,
    ffi.Pointer<ffi.Char> fileName,
  ) {
    return _CreateFileMessage(
      operationID,
      filePath,
      fileName,
    );
  }

  late final _CreateFileMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateFileMessage');
  late final _CreateFileMessage = _CreateFileMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateMergerMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> messageList,
    ffi.Pointer<ffi.Char> title,
    ffi.Pointer<ffi.Char> summaryList,
  ) {
    return _CreateMergerMessage(
      operationID,
      messageList,
      title,
      summaryList,
    );
  }

  late final _CreateMergerMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateMergerMessage');
  late final _CreateMergerMessage = _CreateMergerMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateFaceMessage(
    ffi.Pointer<ffi.Char> operationID,
    int index,
    ffi.Pointer<ffi.Char> data,
  ) {
    return _CreateFaceMessage(
      operationID,
      index,
      data,
    );
  }

  late final _CreateFaceMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, ffi.Int,
              ffi.Pointer<ffi.Char>)>>('CreateFaceMessage');
  late final _CreateFaceMessage = _CreateFaceMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateForwardMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> m,
  ) {
    return _CreateForwardMessage(
      operationID,
      m,
    );
  }

  late final _CreateForwardMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateForwardMessage');
  late final _CreateForwardMessage = _CreateForwardMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  GoString GetConversationIDBySessionType(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> sourceID,
    int sessionType,
  ) {
    return _GetConversationIDBySessionType(
      operationID,
      sourceID,
      sessionType,
    );
  }

  late final _GetConversationIDBySessionTypePtr = _lookup<
      ffi.NativeFunction<
          GoString Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('GetConversationIDBySessionType');
  late final _GetConversationIDBySessionType =
      _GetConversationIDBySessionTypePtr.asFunction<
          GoString Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void SendMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> recvID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> offlinePushInfo,
  ) {
    return _SendMessage(
      operationID,
      message,
      recvID,
      groupID,
      offlinePushInfo,
    );
  }

  late final _SendMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SendMessage');
  late final _SendMessage = _SendMessagePtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void SendMessageNotOss(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> recvID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> offlinePushInfo,
  ) {
    return _SendMessageNotOss(
      operationID,
      message,
      recvID,
      groupID,
      offlinePushInfo,
    );
  }

  late final _SendMessageNotOssPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SendMessageNotOss');
  late final _SendMessageNotOss = _SendMessageNotOssPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void FindMessageList(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> findMessageOptions,
  ) {
    return _FindMessageList(
      operationID,
      findMessageOptions,
    );
  }

  late final _FindMessageListPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('FindMessageList');
  late final _FindMessageList = _FindMessageListPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void RevokeMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> clientMsgID,
  ) {
    return _RevokeMessage(
      operationID,
      conversationID,
      clientMsgID,
    );
  }

  late final _RevokeMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('RevokeMessage');
  late final _RevokeMessage = _RevokeMessagePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void TypingStatusUpdate(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> recvID,
    ffi.Pointer<ffi.Char> msgTip,
  ) {
    return _TypingStatusUpdate(
      operationID,
      recvID,
      msgTip,
    );
  }

  late final _TypingStatusUpdatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('TypingStatusUpdate');
  late final _TypingStatusUpdate = _TypingStatusUpdatePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  /// mark as read
  void MarkConversationMessageAsRead(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
  ) {
    return _MarkConversationMessageAsRead(
      operationID,
      conversationID,
    );
  }

  late final _MarkConversationMessageAsReadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('MarkConversationMessageAsRead');
  late final _MarkConversationMessageAsRead =
      _MarkConversationMessageAsReadPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void MarkMessagesAsReadByMsgID(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> clientMsgIDs,
  ) {
    return _MarkMessagesAsReadByMsgID(
      operationID,
      conversationID,
      clientMsgIDs,
    );
  }
